manifests/all-in-one.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"deployment-2048","namespace":"game-2048"},"spec":{"replicas":5,"selector":{"matchLabels":{"app.kubernetes.io/name":"app-2048"}},"template":{"metadata":{"labels":{"app.kubernetes.io/name":"app-2048"}},"spec":{"containers":[{"image":"public.ecr.aws/l6m2t8p7/docker-2048:latest","imagePullPolicy":"Always","name":"app-2048","ports":[{"containerPort":80}]}]}}}}
    creationTimestamp: "2025-07-10T21:32:34Z"
    generation: 1
    name: deployment-2048
    namespace: game-2048
    resourceVersion: "26219"
    uid: 5e9c457a-813d-4fec-a4f3-12374a818204
  spec:
    progressDeadlineSeconds: 600
    replicas: 5
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app.kubernetes.io/name: app-2048
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app.kubernetes.io/name: app-2048
      spec:
        containers:
        - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
          imagePullPolicy: Always
          name: app-2048
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 5
    conditions:
    - lastTransitionTime: "2025-07-10T21:33:27Z"
      lastUpdateTime: "2025-07-10T21:33:27Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-07-10T21:32:35Z"
      lastUpdateTime: "2025-07-10T21:33:33Z"
      message: ReplicaSet "deployment-2048-bdbddc878" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 5
    replicas: 5
    updatedReplicas: 5
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"service-2048","namespace":"game-2048"},"spec":{"ports":[{"port":80,"targetPort":80}],"selector":{"app.kubernetes.io/name":"app-2048"},"type":"ClusterIP"}}
    creationTimestamp: "2025-07-11T09:30:26Z"
    name: service-2048
    namespace: game-2048
    resourceVersion: "248015"
    uid: 86589f51-3650-47ac-94a6-ffb76a1f8f3f
  spec:
    clusterIP: 10.100.99.107
    clusterIPs:
    - 10.100.99.107
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app.kubernetes.io/name: app-2048
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/target-type":"ip"},"name":"ingress-2048","namespace":"game-2048"},"spec":{"ingressClassName":"alb","rules":[{"http":{"paths":[{"backend":{"service":{"name":"service-2048","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2025-07-11T01:35:25Z"
    finalizers:
    - ingress.k8s.aws/resources
    generation: 1
    name: ingress-2048
    namespace: game-2048
    resourceVersion: "230625"
    uid: 536885a0-8529-4b73-b3cc-10b842ce55bf
  spec:
    ingressClassName: alb
    rules:
    - http:
        paths:
        - backend:
            service:
              name: service-2048
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - hostname: k8s-game2048-ingress2-bcac0b5b37-1615776208.us-east-1.elb.amazonaws.com
kind: List
metadata:
  resourceVersion: ""
